--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title></title>
   </head>
   <body>
+    <h1>animalPrint</h1>
+    <section class="texto">
+      <p>Nosotras somos unas mujeres bien chulas, somos
+        super diversas refiriendonos a la forma de ser,
+      culturalmente y de forma de pensar.</p>
+
+      <div class="nombres">
+        <div><a href="#">Aileen</a></div>
+        <div><a href="#">Yessica</a></div>
+        <div><a href="#">Magenta</a></div>
+        <div><a href="#">Amelie</a></div>
+        <div><a href="#">Nohemi</a></div>
+        <div><a href="#">Parivash</a></div>
+        <div><a href="#">Karen</a></div>
+        <div><a href="#">Elizabeth</a></div>
+      </div>
+
+    </section>
+
 
   </body>
 </html>
